================= Unreleased ==================
; Fixed ; Minor ; PyFMI ; #5706
Added checks on the nominal values.

; Feature ; Minor ; Compiler ; #5515
Expanded variability propagation to also work on initial system. 
Controlled with experimental option, default off.

; Change ; Minor ; Compiler ; #5694
Reworked GUID generation to only depend on modelDescription.xml.

; Fixed ; Minor ; Compiler ; #5663
Fixed type checking of array sizes for elements in arrays of records.

; Fixed ; Minor ; Compiler ; #5699
Made sure to release the package.order file after reading.

; Fixed ; Minor ; Documentation ; #5698
Add more javadoc for how the AnnotationProvider framework works.

; Fixed ; Minor ; Compiler ; #5689
Enabled evaluation of non-literal expressions in annotations.

; Fixed ; Minor ; Compiler ; #5692
Fixed exception from specific combination of record with array of unknown 
size in if expression in binding expression.

; Fixed ; Major ; Compiler ; #5634
Updated calculation order of start values and dependent parameters to reduce
number of evaluations.

; Fixed ; Minor ; Compiler ; #5688
Fixed that binding expression splitting doesn't check bounds.

; Fixed ; Minor ; Compiler ; #5687
Don't allow any inlining of equations in when loops.

; Fixed ; Minor ; Runtime ; #5684
Fixed segfault when calling free directly after a reset on CS FMUs.

; Fixed ; Minor ; Compiler ; #5676
Fixed a problem causing incorrect annotation trees to be created in some cases.

; Fixed ; Major ; Build system ; #5671
Fixed an issue where gcc compiled FMUs did not work on Windows 10 together
with a VS2017 compiled software.

; Changed ; Minor ; Compiler ; #5670
Update handling of constants, and accesses to package constants, in functions
for improved compilation and simulation performance.

; Fixed ; Minor ; PyFMI ; #5668
Fixed issue with reusing the PyFMI computed FD Jacobian.

; Fixed ; Minor ; Runtime ; #5665
Updated the loglevel conversion between runtime and Kinsol which in some